[package]
name = "gym-hog"
version = "0.1.0"
authors = ["aaryan_gulia <aaryan.gulia@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = { version = "2.3.7", optional = true} 
tokio = { version = "1.47.1", features = ["full"], optional = true }


[features]
default = ["server" , "web"]
server = ["dioxus/server","surrealdb","dep:tokio"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
